Debug 김지훈
서비스단에
Stream.toList() 라는게 원래 있는 메서드에요?
에러 떠서 Stream -> Collector ->LIst로 바꿨습니다